--- a/clustering/flaskapp/templates/coms_clusters.html
+++ b/clustering/flaskapp/templates/coms_clusters.html
@@ -20,7 +20,6 @@
 		function markValid(boxId) {
 		    var box = document.getElementById( boxId );
 		    var clusterId = boxId.substring(0, boxId.indexOf('VerifyBox'));
-		    console.log(clusterId);
 		    var titleId = clusterId + 'Title';
 		    if ( box.checked ) {
 		        document.getElementById(titleId).style.color = "#228B22";
@@ -66,9 +65,11 @@
 
 			for(var i=0; i<goodDocs.length; i++)
             {
-                str += goodDocs[i].textContent.trim().substring(4, goodDocs[i].textContent.lastIndexOf('\"')) + goodDocs[i].textContent.trim().substring(goodDocs[i].textContent.lastIndexOf('\"') + 1) + "\n";
+            	var span = goodDocs[i].getElementsByClassName('sentenceTxt')[0];
+            	console.log(span.innerHTML);
+                // str += goodDocs[i].textContent.trim().substring(4, goodDocs[i].textContent.lastIndexOf('\"')) + goodDocs[i].textContent.trim().substring(goodDocs[i].textContent.lastIndexOf('\"') + 1) + "\n";
 
-                // str += goodDocs[i].innerHTML.substring(goodDocs[i].innerHTML.indexOf('>')+1).substring(goodDocs[i].innerHTML.indexOf("'")+1) + "\n";
+                str += span.innerHTML.substring(4, span.innerHTML.lastIndexOf('" (')) + span.innerHTML.substring(span.innerHTML.lastIndexOf('(')) + '\n';
             }
 
             return str.replace(/"/g, "'");
@@ -77,7 +78,6 @@
 		function aggregateBadDocs(btnId){
 			var badData = "";
 			$(".docBody div:visible").each(function() { 
-			    console.log($(this).attr('id')); 
 			    badData += this.textContent.trim().substring(4, this.textContent.lastIndexOf('" (')) + "\n";
 			});
 
@@ -254,7 +254,6 @@
 			// var screenPercent = 100/numClusters + "%";
 			// $('.summary').css('width', screenPercent);
 
-			console.log(data);
 			var numClusters = 0;
 			for(d in data){
 				if(d === "Document count"){
@@ -290,7 +289,6 @@
 					// console.log(data[d][0]);
 					$(".container").append(row);
 					// var chbxId = "'" + id + "Chbx'";
-					console.log(data[d][0]['word'])
 					var word = "";
 					// var sentence = "";
 					var sentenceCount = 0;
@@ -307,12 +305,12 @@
 							}
 							else if(p === "sentence"){
 								var sentence = "\"..." + data[d][i][p] + "\" " + sentenceWeight;
-								$('#' + id + ' .docBody').append("<div class='goodDoc' style='display:block;' id='" + id + "sentence" + sentenceCount + "' onclick='markDocument(this.id)'> <input type='checkbox' id ='" + id + "sentence" + sentenceCount +"VerifyBox'>\t"+ sentence +"</div>");
+								$('#' + id + ' .docBody').append("<div class='goodDoc' style='display:block;' id='" + id + "sentence" + sentenceCount + "' onclick='markDocument(this.id)'> <input type='checkbox' id ='" + id + "sentence" + sentenceCount +"VerifyBox'>\t<span class='sentenceTxt'>"+ sentence +"</div>");
 								sentenceCount += 1;
 								sentenceWeight = "";
 							}
 							else if(p === "sent_weight"){
-								sentenceWeight = "(" + data[d][i][p] + ")<br>";
+								sentenceWeight = "(" + data[d][i][p] + ")</span><br>";
 							}
 							else if(p === "doc_count"){
 								$('#' + id + ' .docCount').append("<div> Documents in cluster: "+ data[d][i][p] +"</div>");
