--- a/clustering/flaskapp/templates/verified_clusters.html
+++ b/clustering/flaskapp/templates/verified_clusters.html
@@ -66,8 +66,7 @@
 		left: 0px;
 	}
 	.badDoc{
-		color: rgba(254, 27, 7, 0.7);
-		margin-bottom: 20;
+		color: rgba(169, 169, 169, 0.8);
 	}
 	button{
 		margin: 10;
@@ -106,8 +105,9 @@
 		color: black;
 	    margin-bottom: 20;
 	}
-	.goodDoc, .badDoc{
+	.goodDoc, .badDoc, .neutralDoc{
 		cursor: pointer;
+		margin-bottom: 20;
 	}
 	#header{
 		position: fixed;
@@ -148,7 +148,7 @@
 			if(warning){
 				alert(warning);
 			}
-			
+
 			// var count = '{{ count }}';
 			var row = "<div id='header'> \
 						<div class='row' id='topRow'> \
@@ -283,7 +283,7 @@
 
 			$("#filler").height($("#header").outerHeight());
 			$("#backCover").height($("#header").height());
-			$("#backCover").width($("#container").outerWidth());
+			$("#backCover").width($(".container").outerWidth());
 
 			aggregateValidDocumentsForReclustering(numClusters);
 		});
